# QuantumMesh

./: .editorconfig  .flake8  README.md  pyproject.toml  setup.py
.github/workflows/: azure-webapps-python.yml
docs/api/: getting_started.md
src/: simulator.py
src/advanced_feature/advanced_network_traffic_analysis/: advanced_network_traffic_analysis.py
src/advanced_feature/advanced_node_profiling/: advanced_node_profiling.py
src/advanced_feature/ai_driven_incident_response/: ai_driven_incident_response.py
src/advanced_feature/distributed_ledger_access_control/: distributed_ledger_access_control.py
src/advanced_feature/hybrid_quantum_resistant_cryptography/: hybrid_quantum_resistant_cryptography.py
src/advanced_feature/in_memory_data_encryption/: in_memory_data_encryption.py
src/advanced_feature/neural_network_based_anomaly_detection/: anomaly_detection.py
src/advanced_feature/neuromorphic_processing/: neuromorphic_processing.py
src/advanced_feature/quantum_inspired_optimization/: quantum_inspired_optimization.py
src/advanced_feature/quantum_key_distribution/: qkd_bb84.py
src/advanced_feature/quantum_resistant_cryptography/: quantum_resistant_cryptography.py
src/advanced_feature/quantum_secure_direct_communication/: qsdc_ping_pong.py
src/advanced_feature/real_time_threat_intelligence_feed/: real_time_threat_intelligence_feed.py
src/mesh_network_integration/: mesh_network_integration.py
src/quantum/: circuit.py  gate.py
tests/quantum/: test_circuit.py  test_gate.py
tests/simulator/: test_simulator.py
(+2 files in other folders)
